--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,7 @@
 @page "/"
 
-<PageTitle>geduta</PageTitle>
+<PageTitle>Azure Documentation</PageTitle>
 
-<h1>Hello!</h1>
+<h1>Hello friends!</h1>
 
-Page under construction
+On this portal you will find documentation and videos about Azure Cloud
