--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,14 +14,31 @@
                 <span class="oi oi-cloud" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdata" @onclick="()=>expandSubMenu= !expandSubMenu">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Azure Defender >
+            </NavLink>
+            @if (expandSubMenu)
+            {
+                <ul class="nav flex-column">
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="overview">
+                        <span class="oi oi-circle-check" aria-hidden="true"></span> Overview
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="fetchdata">
+                        <span class="oi oi-circle-check" aria-hidden="true"></span> Sub 2
+                        </NavLink>
+                    </li>
+                </ul>
+            }
+        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-caret-top" aria-hidden="true"></span> Azure AD
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-circle-check" aria-hidden="true"></span> Azure Defender
             </NavLink>
         </div>
     </nav>
@@ -29,6 +46,7 @@
 
 @code {
     private bool collapseNavMenu = true;
+    private bool expandSubMenu;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
